--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,61 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+h1 {
+  text-align: center;
+}
+
 a {
   color: #00B7FF;
+}
+
+ul {
+    margin: 0 auto;
+    width: 700px;
+}
+
+.bike {
+  list-style: none;
+  display: inline-block;
+  width: 650px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.buy {
+  background: blue;
+  color: #efefef;
+  padding: 10px;
+  border: 0;
+  display: block;
+  width: 87px;
+  margin: 0 auto;
+  text-decoration: none;
+}
+
+.unit {
+  float: left;
+}
+.unitRight {
+  float: right;
+}
+
+.item-block {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.item-block .buy {
+  margin: 209px 87px 0 0;
+  font-size: 43px;
+  width: 177px;
+}
+
+.clear {
+  clear: both;
+}
+
+.price {
+  font-size: 30px;
+  margin: 20px 50px 0 0;
 }
